finished rectangular mazes and started work on circular ones

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Ludwig Granstedt, Anton Arturén",
   "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "generator": "file:../generator/pkg"
+  },
   "devDependencies": {
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
